feat: Enhance challenge definitions with starter and solution snippets
- Added optional `starterSnippet` and `solutionSnippet` fields to `ChallengeDef` for better testing of learner engagement.
- Updated `ProgressStore` to handle lesson completion based on all challenge passes.
- Introduced `CommandPalette` for keyboard-driven lesson selection with real-time filtering.
- Improved accessibility features across UI components including `EditorPane`, `InspectorPane`, and `LessonNavigator`.
- Refactored `LessonPane` to utilize new challenge snippet fields and updated UI feedback mechanisms.
- Created `PreviewHost` for rendering snippet output with error handling.
- Enhanced curriculum challenges to include new assertions and snippets for better learner interaction.
- Added `ChallengeHonestyTest` to ensure starter snippets fail and solution snippets pass assertions.
- Updated smoke tests to reflect changes in error handling and UI components.