@@ -1,473 +1,408 @@
-# JavaFX Tutor — A meta JavaFX learning desktop app
+# JavaFX Tutor — Roadmap to 1.0
 
-## Context
-
-You want a desktop application **written in JavaFX** that teaches **JavaFX** by being a working example of itself. The "meta" part is non-trivial because of two coupled requirements:
-
-1. **Live preview**: a user-edited JavaFX snippet must compile and render inside the host app on every keystroke (debounced), without restarting the JVM and without leaking ClassLoaders, threads, or scene-graph references.
-2. **Dynamic mirror**: an inspector that, in one mode, introspects the *preview* scene graph and, in another mode, introspects the *host* scene graph — i.e. the app reflecting on itself live. The same inspector code must walk a `Parent` it owns and a `Parent` it lives inside.
-
-These two together force the architecture: a strict separation between **host scene graph** and **sandbox scene graph**, a per-run **isolating ClassLoader**, a generic **Node introspector** that takes any `Node` root, and an FX-thread protocol that compiles off-thread and mounts on-thread.
-
-The 100-lesson curriculum is the "content" layer that sits on top; the engine is the interesting part.
+_Last updated: 2026-05-22. Reflects code state after Sprint 2._
 
 ---
 
-## Confirmed decisions
+## What's shipped
 
-| Decision | Choice |
-|---|---|
-| Java version | **Temurin 21 LTS** — install via `brew install --cask temurin@21` |
-| JavaFX version | **21.0.5** via Gradle JavaFX plugin |
-| Build system | **Gradle 8.10 (Kotlin DSL)** with `gradlew` wrapper |
-| Module system | **No JPMS for app code** — classpath app, JavaFX modules supplied by Gradle |
-| Runtime compiler access | Add `--add-modules=jdk.compiler` plus javac package opens/exports to `run` and `test` JVM args |
-| Persistence | **JSON in `~/.javafx-tutor/`** via Jackson |
-| Code editor | **RichTextFX `CodeArea`** with Java syntax highlighting |
-| Testing | **JUnit 5** for logic, **TestFX 4.0.18** for UI |
-
----
-
-## Architecture (text diagram)
-
-```
-┌──────────────────────────── Host JVM (single process) ─────────────────────────────┐
-│                                                                                    │
-│  app.JavaFxTutorApp (extends Application)                                          │
-│    └─ host Scene (FX Application Thread, "main")                                   │
-│         └─ MainView (BorderPane)                                                   │
-│              ├─ LessonNavigator   (left rail, list of 100 lessons)                 │
-│              ├─ LessonPane        (left: markdown + objectives + challenges)       │
-│              ├─ EditorPane        (center-top: RichTextFX CodeArea)                │
-│              ├─ PreviewHost       (center-bottom: StackPane with a sandbox wrapper │
-│              │                    that mounts the snippet's returned Parent)       │
-│              └─ InspectorPane     (right: tree + properties + CSS + bounds)        │
-│                                                                                    │
-│  --- engine packages, no JavaFX import in `compile` package -----------------      │
-│                                                                                    │
-│  engine.compile.SnippetCompiler                                                    │
-│    - wraps user code in a class template:                                          │
-│        public class _Snippet { public static Parent build() { ... } }              │
-│    - uses javax.tools.JavaCompiler + InMemoryFileManager                           │
-│    - returns bytecode captured in memory plus the generated entry class name       │
-│                                                                                    │
-│  engine.runtime.SnippetRunner                                                      │
-│    - creates a fresh SnippetClassLoader and calls #build() with a timeout          │
-│    - mounts the Parent into PreviewHost on the FX thread                           │
-│    - holds a single "current" SnippetSession; closes the previous one              │
-│    - SnippetSession.close() detaches Parent, nulls refs, clears loader byte map    │
-│                                                                                    │
-│  engine.inspect.NodeInspector                                                      │
-│    - root-agnostic: walks any Parent (sandbox root OR host MainView root)          │
-│    - emits a TreeItem<NodeRef> for the InspectorPane                               │
-│    - subscribes to widthProperty/heightProperty/styleProperty etc. and             │
-│      re-publishes changes through a listener registry keyed by WeakReference       │
-│                                                                                    │
-│  engine.challenge.ChallengeRunner                                                  │
-│    - assertions take the sandbox root and run scene-graph queries                  │
-│      (e.g. lookupAll(".button") with text predicate)                               │
-│    - never inspects source text                                                    │
-│                                                                                    │
-│  data.curriculum.CurriculumLoader                                                  │
-│    - reads /resources/curriculum/**.md (frontmatter + body)                        │
-│    - parses with commonmark-java, renders to JavaFX TextFlow                       │
-│                                                                                    │
-│  data.progress.ProgressStore                                                       │
-│    - Jackson read/write to ~/.javafx-tutor/state.json                              │
-│    - last-edited snippet stored per lessonId in ~/.javafx-tutor/snippets/<id>.java │
-└────────────────────────────────────────────────────────────────────────────────────┘
-```
-
-### Threading model (strict)
-
-| Activity | Thread | Mechanism |
+| Area | Status | Key files |
 |---|---|---|
-| Editor keystroke → debounce → recompile | FX thread → bg | `PauseTransition` (350 ms) then a job submitted to a single-thread `ExecutorService` |
-| `javax.tools` compilation | bg (compiler executor) | compile bytecode into memory |
-| Snippet `build()` call | bg (per-build daemon executor) | `Future.get(2s)`; interrupt on timeout and report the error |
-| Mount `Parent` into `PreviewHost` | FX thread | discard stale generations; mount only the newest successful result |
-| Disposal of previous snippet | FX thread | detach node from preview wrapper, null refs, clear custom loader byte map |
-| Inspector property listeners | FX thread (all reads + writes) | properties only mutate on FX |
-
-**Why no second JVM yet**: a child JVM costs warmup time and complicates inspector/IPC. A per-run custom `SnippetClassLoader` that calls `defineClass()` from in-memory bytes keeps iteration fast and disposable. A child JVM remains the fallback for truly hostile or non-interruptible snippets, because in-process Java cannot reliably stop arbitrary code once it ignores interrupts.
-
-### How the preview gets its own "Scene" without colliding
-
-The snippet returns a `Parent`, **not a `Scene`**. We mount the `Parent` as a child of `PreviewHost` (a `StackPane`). It participates in the host Scene's layout pulse, gets its own coordinate space, and is fully detachable. We **never** call `snippet.start(new Stage())`. Lessons that need a Stage call `getScene().getWindow()` and are taught to treat the preview pane as their Stage equivalent — this is itself a teachable point.
-
----
-
-## Data model
-
-### Lesson files: Markdown + YAML frontmatter, one file per lesson
-
-`src/main/resources/curriculum/<tier>/<NN>-slug.md`:
-
-```markdown
----
-id: 001-what-is-a-stage
-tier: foundations
-order: 1
-title: "What is a Stage?"
-objectives:
-  - "Explain the difference between Stage, Scene, and Node"
-  - "Create a Stage programmatically and show it"
-estimatedMinutes: 8
-starterSnippet: |
-  public static Parent build() {
-      Label l = new Label("Hello, JavaFX");
-      return new StackPane(l);
-  }
-challenges:
-  - id: c1
-    description: "Change the label text to 'Submit' and wrap it in a VBox"
-    assertion: containsLabeledInside(text="Submit", parentType=VBox)
-nextLesson: 002-scene-and-node
----
-
-# What is a Stage?
-
-A `Stage` is a top-level window. Every JavaFX app starts with one ...
-```
-
-### Assertion DSL — minimal, scene-graph based
-
-`engine.challenge.Assertions` exposes a fluent API used in `assertion:` frontmatter via a tiny parser. v1 supports:
-
-- `containsNodeOfType(Class)` 
-- `containsLabeledWithText(String)`
-- `containsLabeledInside(text, parentType)`
-- `cssClassPresent(node, "myStyle")`
-- `propertyEquals(nodePath, propertyName, value)`
-
-Parser is ~80 lines (regex `funcName(arg1=..., arg2=...)`). Anything more complex graduates to a Java file in `src/main/java/com/jfxtutor/challenges/<lessonId>.java` implementing `ChallengeAssertion`.
-
-### Progress file `~/.javafx-tutor/state.json`
-
-```json
-{
-  "version": 1,
-  "lastLessonId": "012-vbox-vs-hbox",
-  "completed": {
-    "001-what-is-a-stage": { "completedAt": "2026-05-20T14:02:11Z", "timeSpentSec": 412 }
-  },
-  "preferences": { "theme": "dark", "fontSize": 13 }
-}
-```
-
-Last-edited snippet per lesson: `~/.javafx-tutor/snippets/<lessonId>.java` (raw text, not JSON-escaped — easier to grep).
+| In-memory compile pipeline | ✅ Done | [SnippetCompiler.java](src/main/java/com/jfxtutor/engine/compile/SnippetCompiler.java), `InMemoryJavaFileManager`, `SnippetClassLoader`, `SnippetSession` |
+| Debounced runner + generation counter | ✅ Done | [SnippetRunner.java](src/main/java/com/jfxtutor/engine/runtime/SnippetRunner.java) — 350 ms debounce, `forceRun()`, build timeout, FX-thread mount |
+| Live editor (RichTextFX) | ✅ Done | [EditorPane.java](src/main/java/com/jfxtutor/ui/EditorPane.java) |
+| 100-lesson curriculum loader | ✅ Done | [CurriculumLoader.java](src/main/java/com/jfxtutor/data/curriculum/CurriculumLoader.java), `curriculum/index.txt`, all 100 `.md` files |
+| Challenge runner + assertion DSL | ✅ Done | `engine/challenge/` — `ChallengeAssertion`, `AssertionResult`, `Assertions`, `AssertionParser`, `ClassResolver`, `ChallengeRunner` |
+| Challenge UI in LessonPane | ✅ Done | [LessonPane.java](src/main/java/com/jfxtutor/ui/LessonPane.java) — Check button, ○/✓/✗ icons, feedback label, pass state restored from progress |
+| Progress persistence | ✅ Done | `data/progress/` — `ProgressStore`, `Progress`, `LessonRecord`, `SnippetStore`, `ProgressMigrator`; atomic writes; schema versioning; `~/.javafx-tutor/` |
+| Completion badges in navigator | ✅ Done | [LessonNavigator.java](src/main/java/com/jfxtutor/ui/LessonNavigator.java) — ✓ badge, `refreshBadges()`, `selectNext/Prev()`, `findById()` |
+| Snippet restore on lesson select | ✅ Done | [MainView.java](src/main/java/com/jfxtutor/app/MainView.java) — saves/restores per-lesson snippets, restores last lesson on launch |
+| Inspector v2 — engine layer | ✅ Done | [NodeRef.java](src/main/java/com/jfxtutor/engine/inspect/NodeRef.java), [NodeInspector.java](src/main/java/com/jfxtutor/engine/inspect/NodeInspector.java), [PropertyWatcher.java](src/main/java/com/jfxtutor/engine/inspect/PropertyWatcher.java), [HighlightOverlay.java](src/main/java/com/jfxtutor/engine/inspect/HighlightOverlay.java) |
+| Inspector — Properties / CSS / Bounds tabs | ✅ Done | [InspectorPane.java](src/main/java/com/jfxtutor/ui/InspectorPane.java) — three tabs, live-updating on selection |
+| Inspector — hover-to-highlight | ✅ Done | Mouse move over preview → translucent blue overlay + name tag; click-to-select in tree |
+| Inspector — Mirror mode | ✅ Done | Toggle button re-roots inspector on the host's own scene graph |
+| Theme system (dark / light / HC) | ✅ Done | [ThemeManager.java](src/main/java/com/jfxtutor/ui/ThemeManager.java), `theme-dark/light/hc.css`, Cmd+T cycles, persisted in ProgressStore |
+| Keyboard shortcuts shell | ✅ Done | [KeyBindings.java](src/main/java/com/jfxtutor/ui/KeyBindings.java) — Cmd+]/[ next/prev, Cmd+R recompile, Cmd+I inspector, Cmd+T theme; stubs for tutor/palette/find |
+| Test suite (144 tests) | ✅ Done | `AssertionParserTest`, `AssertionsTest`, `ChallengeAssertionsCoverageTest`, `NodeInspectorTest`, `AllStarterSnippetsCompileTest`, `SmokeUiTest` |
 
 ---
 
-## Project skeleton (files to create in Phase 0)
+## What's in the plan but NOT yet in the codebase
 
-```
-javafx/
-├── build.gradle.kts
-├── settings.gradle.kts
-├── gradle.properties
-├── gradle/wrapper/                          (gradle wrapper)
-├── gradlew, gradlew.bat
-├── README.md                                (update)
-├── .gitignore                               (extend: build/, .gradle/, .idea/)
-└── src/
-    ├── main/
-    │   ├── java/com/jfxtutor/
-    │   │   ├── app/
-    │   │   │   ├── JavaFxTutorApp.java          (Application subclass, main())
-    │   │   │   └── MainView.java                (BorderPane composition)
-    │   │   ├── ui/
-    │   │   │   ├── LessonNavigator.java
-    │   │   │   ├── LessonPane.java
-    │   │   │   ├── EditorPane.java              (wraps RichTextFX CodeArea)
-    │   │   │   ├── PreviewHost.java             (StackPane mount point)
-    │   │   │   └── InspectorPane.java
-    │   │   ├── engine/
-    │   │   │   ├── compile/
-    │   │   │   │   ├── SnippetCompiler.java
-    │   │   │   │   ├── CompileResult.java
-    │   │   │   │   ├── InMemoryJavaFileManager.java
-    │   │   │   │   ├── InMemorySourceFile.java
-    │   │   │   │   └── InMemoryClassFile.java
-    │   │   │   ├── runtime/
-    │   │   │   │   ├── SnippetClassLoader.java
-    │   │   │   │   ├── SnippetRunner.java
-    │   │   │   │   └── SnippetSession.java      (AutoCloseable; CL + Parent)
-    │   │   │   ├── inspect/
-    │   │   │   │   ├── NodeInspector.java
-    │   │   │   │   ├── NodeRef.java
-    │   │   │   │   └── PropertyWatcher.java
-    │   │   │   └── challenge/
-    │   │   │       ├── ChallengeRunner.java
-    │   │   │       ├── Assertions.java
-    │   │   │       └── AssertionParser.java
-    │   │   └── data/
-    │   │       ├── curriculum/
-    │   │       │   ├── Lesson.java
-    │   │       │   ├── LessonFrontmatter.java
-    │   │       │   └── CurriculumLoader.java
-    │   │       └── progress/
-    │   │           └── ProgressStore.java
-    │   └── resources/
-    │       ├── css/
-    │       │   ├── app.css
-    │       │   └── editor-java.css              (RichTextFX token styles)
-    │       └── curriculum/
-    │           └── foundations/
-    │               ├── 001-what-is-a-stage.md
-    │               ├── 002-scene-and-node.md
-    │               └── 003-stackpane-hello.md
-    └── test/
-        ├── java/com/jfxtutor/
-        │   ├── engine/compile/SnippetCompilerTest.java
-        │   ├── engine/challenge/AssertionsTest.java
-        │   ├── data/curriculum/CurriculumLoaderTest.java
-        │   └── ui/SmokeUiTest.java               (TestFX)
-        └── resources/curriculum-test/
-            └── 999-fixture.md
-```
+Everything below is unbuilt. Sprint order matches the original execution plan.
 
-### `build.gradle.kts` (the load-bearing parts)
+---
 
+### Sprint 3 — Track 1: B2a — AI Tutor skeleton + first-run onboarding
+
+**New files:**
+
+`src/main/java/com/jfxtutor/data/config/AppConfig.java`
+Jackson-backed `~/.javafx-tutor/config.json`. Fields: `apiKey`, `model` (default `"claude-haiku-4-5-20251001"`), `tutorEnabled`, `checkForUpdates`, `costThisMonth`. Atomic write via `.tmp` + `ATOMIC_MOVE`.
+
+`src/main/java/com/jfxtutor/ai/AnthropicClient.java`
+Wraps `com.anthropic:anthropic-java` SDK. `streamMessage(params, systemPrompt, onToken, onDone, onError)`. Generation-counter pattern (from `SnippetRunner`) discards stale replies on lesson navigation. Prompt caching: wraps lesson-body block with `cache_control: {type: "ephemeral"}`.
+
+`src/main/java/com/jfxtutor/ai/SystemPromptBuilder.java`
+Assembles system prompt: lesson markdown body (cached block), user snippet (≤4 KB), latest compile diagnostics, failed assertion message + DSL string, current lesson id.
+
+`src/main/java/com/jfxtutor/ai/CostMeter.java`
+Tracks `inputTokens`, `outputTokens`, `cacheReadTokens` per session; aggregates monthly cost in `AppConfig.costThisMonth`.
+
+`src/main/java/com/jfxtutor/ui/FirstRunWizard.java`
+Modal dialog shown on first launch (or when `apiKey` blank). Steps: (1) welcome + link, (2) paste key → validate with cheap ping, (3) model selector (Haiku / Sonnet / Opus), (4) confirm or Skip (requires second click).
+
+`src/main/java/com/jfxtutor/ui/TutorPane.java`
+Right-pane panel (next to Inspector, toggled with Cmd+/). Contains: quick-action buttons row ("Why doesn't this compile?", "Why does my assertion fail?", "Hint please", "Explain this", "Next step", "Review my code"), scrollable message history rendered via commonmark-java → TextFlow, text input + Send button, `CostMeterBar` footer. Streaming tokens appear via `Platform.runLater`. Any ` ```java ` block in a reply gets Copy + "Apply to editor" buttons.
+
+`src/main/java/com/jfxtutor/ui/CostMeterBar.java`
+`HBox` label: `"Session: 1.2K tok · Month: $0.04"`. Updates after each reply.
+
+**Modify:**
+- [build.gradle.kts](build.gradle.kts) — add `implementation("com.anthropic:anthropic-java:2.+")`
+- [MainView.java](src/main/java/com/jfxtutor/app/MainView.java) — add `TutorPane` as fourth right-pane tab; wire Cmd+/ toggle; pass `AppConfig` + `AnthropicClient` + `SystemPromptBuilder`
+- [JavaFxTutorApp.java](src/main/java/com/jfxtutor/app/JavaFxTutorApp.java) — load `AppConfig`; show `FirstRunWizard` if `apiKey` blank
+- [KeyBindings.java](src/main/java/com/jfxtutor/ui/KeyBindings.java) — wire `onToggleTutor` stub to real toggle
+
+**Tests:** `AnthropicClientTest` (mock HTTP, verify cache header on second call, verify stale-gen discard), `SystemPromptBuilderTest` (golden prompt for known inputs)
+
+---
+
+### Sprint 3 — Track 2: B1a — Hints + solution fields + SolutionDiffView
+
+**New files:**
+
+`src/main/java/com/jfxtutor/ui/SolutionDiffView.java`
+Side-by-side diff panel. Left = user snippet, right = reference solution. DIY LCS line-diff (~60 lines): green gutter for added lines, red for removed, white for unchanged. "Apply solution" button replaces editor content after a confirmation dialog. No external diff library.
+
+**Modify:**
+- [LessonFrontmatter.java](src/main/java/com/jfxtutor/data/curriculum/LessonFrontmatter.java) — add `List<String> hints` and `String solution` (Jackson `@JsonProperty`; both nullable)
+- [LessonRecord.java](src/main/java/com/jfxtutor/data/progress/LessonRecord.java) — add `int hintsUsed` and `boolean viewedSolution`
+- [LessonPane.java](src/main/java/com/jfxtutor/ui/LessonPane.java) — below challenge section add: "Get a hint" button (reveals one hint at a time, tracked in `LessonRecord.hintsUsed`, label becomes "Hint 2/3"); "Show solution" button (confirmation dialog warns this marks solved-with-help, then opens `SolutionDiffView`)
+
+**Content:** author `hints` (3 per lesson) + `solution` for lessons 001–010 as template; remaining 90 done in Sprint 5/7/9.
+
+**Tests:** `SolutionDiffViewTest` (golden diffs for all-same / all-different / mixed), `LessonFrontmatterTest` (hints + solution parse from YAML)
+
+---
+
+### Sprint 4 — Track 1: B2b — Tutor tool use + ProposedEditView
+
+**New files:**
+
+`src/main/java/com/jfxtutor/ai/Tools.java`
+Tool schema list for Anthropic API: `read_lesson(id)`, `read_user_snippet()`, `read_compile_errors()`, `read_assertion_result()`, `propose_edit(diff)`. Host fulfills tool calls; `propose_edit` opens `ProposedEditView` and blocks until user decides.
+
+`src/main/java/com/jfxtutor/ui/ProposedEditView.java`
+Modal diff panel (reuses `SolutionDiffView` renderer). "Accept" applies diff to editor. "Reject" sends rejection message to continue conversation.
+
+**Modify:**
+- `AnthropicClient.java` — add `streamMessageWithTools(...)`: handles `tool_use` stop reason, calls tool handler, sends `tool_result`, continues streaming
+- `TutorPane.java` — wire quick-action buttons to real sends; add privacy banner on first send (stored in `AppConfig`); update cost meter after each reply
+
+---
+
+### Sprint 4 — Track 2: B3b — Theme polish + accessibility + system pref detection
+
+**Modify:**
+
+`ThemeManager.java` — add `detectSystemTheme()`: on macOS exec `defaults read -g AppleInterfaceStyle`; returns `"dark"` or `"light"`; called at startup if no saved theme in `AppConfig`.
+
+`JavaFxTutorApp.java` — call `themeManager.detectAndApplySystemTheme()` before `primaryStage.show()`.
+
+Accessibility (Java, not CSS):
+- All `Button`, `ToggleButton` — `setAccessibleText(label)`
+- All `TreeView`, `TableView` — `setAccessibleRole(...)`
+- Challenge check buttons — `setAccessibleText("Check: " + def.description)`
+
+**New files:**
+
+`src/main/java/com/jfxtutor/ui/PreferencesDialog.java`
+`Dialog<Void>` with: font-size slider (10–18 px, persisted to `AppConfig.fontSize`), theme radio buttons (Dark / Light / High Contrast), "Reset snippet" button for current lesson.
+
+Add `AppConfig.fontSize` field; `ThemeManager.applyFontSize(double)` sets inline `-fx-font-size` on root node.
+
+**Collapsible panes:** each SplitPane column header gets a `◀`/`▶` chevron; click collapses/restores; divider positions saved to `ProgressStore` preferences.
+
+**CSS hot reload (dev mode):** `ThemeManager.watchThemeFile()` — `WatchService` on `~/.javafx-tutor/dev-theme.css`; reloads within 500 ms; only active when `-Ddev=true` JVM flag is set. Matches lesson 077.
+
+---
+
+### Sprint 5 — Track 1: B4 — Search + command palette + outline navigator
+
+**New files:**
+
+`src/main/java/com/jfxtutor/ui/SearchService.java`
+Offline scored token-match index. Indexes all lessons at startup by: title tokens, tier, id, objectives, first 200 chars of body. `search(String query)` → `List<SearchResult>` sorted by score (exact id > title token > body token). No external dep, ~80 lines.
+
+`src/main/java/com/jfxtutor/ui/CommandPalette.java`
+Undecorated popup `Stage` centered on screen. Text field → live `ListView<SearchResult>`. Enter/click navigates to lesson via `LessonNavigator.selectLesson()`. Escape / focus-lost closes. Also accepts commands: `"theme dark"`, `"theme light"`, `"next"`, `"prev"`, `"inspector"`, `"tutor"`. Opened by Cmd+Shift+P (already stubbed in KeyBindings).
+
+**Modify [LessonNavigator.java](src/main/java/com/jfxtutor/ui/LessonNavigator.java):**
+- Tier rows show completion counts: `"Controls  8 / 15"` in muted text
+- Recent lessons ring: last 5 selected lessons under a "Recent" pseudo-tier at the top
+- Bookmark toggle: star icon per row; stored in `ProgressStore` preferences as comma-separated id list
+
+**Modify [MainView.java](src/main/java/com/jfxtutor/app/MainView.java)** — instantiate `CommandPalette`; pass `SearchService` + `LessonNavigator`; wire Cmd+Shift+P.
+
+**Modify [KeyBindings.java](src/main/java/com/jfxtutor/ui/KeyBindings.java)** — wire `onCommandPalette` stub to real `CommandPalette.show()`.
+
+**Tests:** `SearchServiceTest` — exact-id match ranks first; fuzzy title match; empty query returns all lessons ordered by id.
+
+---
+
+### Sprint 5 — Track 2: B9a — Curriculum quality, lessons 001–030
+
+Add `hints:` (3 items) and `solution: |` to frontmatter of lessons 001–030. Tighten `assertion:` strings — upgrade bare `containsNodeOfType` to `containsLabeledWithText` or `parentChain` where appropriate. Add `## Common Mistakes` section (2–3 bullets) to each lesson body.
+
+**Tests:** extend `ChallengeAssertionsCoverageTest` to assert `hints` non-null and `solution` non-blank for lessons 001–030.
+
+---
+
+### Sprint 6 — Track 1: B10a — HeapWatcher + CrashReporter + verbose logging
+
+**New files:**
+
+`src/main/java/com/jfxtutor/engine/runtime/HeapWatcher.java`
+Daemon `ScheduledExecutorService`, 30-second interval. Reads `MemoryMXBean.getHeapMemoryUsage().getUsed()`. Logs `[WARN]` if heap grows >20 MB for 3 consecutive ticks. `snapshot()` for tests.
+
+`src/main/java/com/jfxtutor/util/CrashReporter.java`
+Installed via `Thread.setDefaultUncaughtExceptionHandler` + FX-thread override. On uncaught exception: writes `~/.javafx-tutor/crash-<timestamp>.log` (stack trace, last snippet, lesson id, Java version, OS). Shows non-blocking alert with "Open" + "Dismiss" buttons.
+
+**Modify:**
+- [JavaFxTutorApp.java](src/main/java/com/jfxtutor/app/JavaFxTutorApp.java) — install `CrashReporter`; start/stop `HeapWatcher`
+- [SnippetRunner.java](src/main/java/com/jfxtutor/engine/runtime/SnippetRunner.java) — call `HeapWatcher.hint()` on each session close
+- [AppLog.java](src/main/java/com/jfxtutor/util/AppLog.java) — add `verbose(tag, msg)` (gated by `AppConfig.verboseLog`); add file sink appending to `~/.javafx-tutor/log.txt` with 5 MB rotation
+
+**Tests:** `HeapWatcherTest` (recompile 200 snippets, GC, assert heap delta < 50 MB), `CrashReporterTest` (fake uncaught exception, verify crash log created)
+
+---
+
+### Sprint 6 — Track 2: B5 — Achievements, streaks, time tracking
+
+**New files:**
+
+`src/main/java/com/jfxtutor/data/progress/Streaks.java`
+Reads `Progress.completedAt` timestamps. `currentStreak()` — consecutive calendar days with ≥1 lesson completed. `longestStreak()` — all-time best. `todayCount()` — lessons completed today.
+
+`src/main/java/com/jfxtutor/ui/AchievementsPane.java`
+Non-modal `Stage`, opened by Cmd+D. Sections: streak counter, tier completion grid (9 tiles, "Master" badge at 100%), time breakdown per tier, all-time stats (lessons, challenges, hints, solutions).
+
+**Modify:**
+- [MainView.java](src/main/java/com/jfxtutor/app/MainView.java) — record `System.currentTimeMillis()` on lesson open; add elapsed seconds to `LessonRecord.timeSpentSec` on lesson switch/close; status bar shows streak: `"3-day streak  ·  Lesson 7 of 100"`
+- [LessonNavigator.java](src/main/java/com/jfxtutor/ui/LessonNavigator.java) — tier rows show "Master" when completion = 100%
+- [KeyBindings.java](src/main/java/com/jfxtutor/ui/KeyBindings.java) — add Cmd+D → `AchievementsPane.show()`
+
+**Tests:** `StreaksTest` — known timestamps → assert `currentStreak()`, `longestStreak()`, edge cases (no completions, gap in middle, all today)
+
+---
+
+### Sprint 7 — Track 1: B7.1 — Visual editor, read-only property grid
+
+**New packages:** `src/main/java/com/jfxtutor/design/` and `src/main/java/com/jfxtutor/ui/design/`
+
+**New files:**
+
+`src/main/java/com/jfxtutor/ui/design/DesignTab.java`
+`ToggleButton` in the `InteractiveIde` toolbar. When on: overlays selection handles; opens `PropertyGrid` side panel. When off: removes overlay, hides grid.
+
+`src/main/java/com/jfxtutor/ui/design/PropertyGrid.java`
+`TableView<PropertyRow>` (read-only this sprint). Shows `getCssMetaData()` + common properties for selected node. Groups: Layout, Appearance, Text, Behavior. Reuses `InspectorPane.PropertyRow`.
+
+`src/main/java/com/jfxtutor/ui/design/WidgetPaletteView.java`
+Collapsible tree of 30 widget tiles (Layouts, Controls, Shapes). Tiles visible; drag not wired until Sprint 9.
+
+`src/main/java/com/jfxtutor/design/WidgetPalette.java`
+Static registry of the 30-widget set: Button, Label, TextField, CheckBox, RadioButton, VBox, HBox, StackPane, BorderPane, GridPane, Rectangle, Circle, Line, Ellipse, Polygon, Arc, Text, ImageView, ListView, TableView, TreeView, ComboBox, ChoiceBox, Slider, ProgressBar, Spinner, DatePicker, ColorPicker, TabPane, Accordion.
+
+**Modify:**
+- [PreviewHost.java](src/main/java/com/jfxtutor/ui/PreviewHost.java) — `setDesignMode(boolean)`: in design mode adds selection handles via `HighlightOverlay`; click fires `Consumer<Node>` to update `PropertyGrid`
+- [InteractiveIde.java](src/main/java/com/jfxtutor/ui/InteractiveIde.java) — add `DesignTab` toggle to toolbar; instantiate `PropertyGrid`; wire selection callback
+
+---
+
+### Sprint 7 — Track 2: B9b — Curriculum quality, lessons 031–065
+
+Same pattern as B9a for the Controls and Properties tiers. Tighten assertions on all 35 controls-tier lessons (most use bare `containsNodeOfType`).
+
+---
+
+### Sprint 8 — Track 1: B7.2 — Round-trip codegen from property grid
+
+**New files:**
+
+`src/main/java/com/jfxtutor/design/SourceMutator.java`
+Parses snippet with JavaParser. `mutate(source, nodeId, property, newValue)` → modified source. Location strategy: id → styleClass → positional index. Ambiguous → insert `// editor-target: <uuid>` comment and anchor to it.
+
+`src/main/java/com/jfxtutor/design/ConstructionLocator.java`
+Traverses JavaParser AST to find `ObjectCreationExpr` or `MethodCallExpr` matching a live node. Heuristics: exact id → styleClass → positional index among same-type siblings.
+
+`src/main/java/com/jfxtutor/design/LiteralFormatter.java`
+Formats values as Java source: `new Insets(8,12,8,12)`, `Color.web("#3366ff")`, `Pos.CENTER`, `"text"`, `true`, `42.0`.
+
+**Modify:**
+- `PropertyGrid.java` — make cells editable; on commit call `SourceMutator.mutate()` → `EditorPane.setTextProgrammatic()` → debounced recompile; lock editor during mutation
+- [EditorPane.java](src/main/java/com/jfxtutor/ui/EditorPane.java) — add `setTextProgrammatic(String)` (single undo entry); add `lock()`/`unlock()` for concurrent-edit guard
+- [build.gradle.kts](build.gradle.kts) — add `implementation("com.github.javaparser:javaparser-core:3.26.+")`
+
+**Tests:** `SourceMutatorTest` (change button text / padding / alignment on known snippets; verify output compiles), `ConstructionLocatorTest` (simple / ambiguous / positional cases)
+
+---
+
+### Sprint 8 — Track 2: B6 — Gist export/import + Copy as Markdown
+
+**New files:**
+
+`src/main/java/com/jfxtutor/share/GistClient.java`
+GitHub Gist API v3 via `java.net.http.HttpClient`. `createGist(filename, content)` → URL. `fetchGist(url)` → content. PAT stored in `AppConfig.githubToken`.
+
+`src/main/java/com/jfxtutor/share/SnippetExporter.java`
+`exportToGist(source, lessonId)` — creates gist, copies URL to clipboard, shows toast. `copyAsMarkdown(source, lessonTitle, previewRoot)` — `Node.snapshot()` → Base64 PNG; wraps snippet in fenced code block; copies to clipboard.
+
+`src/main/java/com/jfxtutor/share/SnippetImporter.java`
+`importFromUrl(url)` — detects gist.github.com; fetches raw content; validates it compiles; loads into editor.
+
+**Modify:**
+- [EditorPane.java](src/main/java/com/jfxtutor/ui/EditorPane.java) — add "Share" toolbar button (hidden if no `githubToken`); "Copy as Markdown" in same menu
+- [AppConfig.java](src/main/java/com/jfxtutor/data/config/AppConfig.java) — add `githubToken: String`
+- [MainView.java](src/main/java/com/jfxtutor/app/MainView.java) — add "Import from URL" item; opens small paste dialog
+
+---
+
+### Sprint 9 — Track 1: B7.3 — Drag-from-palette codegen
+
+**Modify:**
+- `WidgetPaletteView.java` — wire `setOnDragDetected` with widget class name in `Dragboard`
+- [PreviewHost.java](src/main/java/com/jfxtutor/ui/PreviewHost.java) — `setOnDragOver`/`setOnDragDropped`: pick container node at drop position; call `SourceMutator.insertChild(containerRef, widgetSource, insertIndex)`
+- `SourceMutator.java` — add `insertChild(NodeRef, String, int)`: finds container in AST, inserts child expression; if container children are anonymous (`new VBox(a, b, c)`), refactors to named local vars first
+- [EditorPane.java](src/main/java/com/jfxtutor/ui/EditorPane.java) — extend lock/unlock to drag operations; single undo entry on commit
+
+**New in DesignTab:**
+- Unsupported-widget tooltip: widget not in first-30 set + lesson > 030 → "Code-only for this widget", cancel drop
+- "Best learned in code" banner: if lesson uses anonymous inner classes/custom controls (detected by `ConstructionLocator`), show non-blocking banner at top of Design tab
+
+_Prototype branch `feature/visual-editor` merges to `main` after manual QA across first 30 lessons._
+
+---
+
+### Sprint 9 — Track 2: B9c — Curriculum quality, lessons 066–100
+
+Hints/solutions for Events, CSS, FXML, Animation, Packaging tiers. Full assertion tightening pass across all 100. Add `nextLesson` link verification test in CI: every lesson's `nextLesson` must resolve to a real id.
+
+---
+
+### Sprint 10 — Track 1: B10b — Child-JVM sandbox + perf budget
+
+**New files:**
+
+`src/main/java/com/jfxtutor/engine/runtime/ChildJvmRunner.java`
+`ProcessBuilder`-based child JVM. Sends compiled bytecodes over stdin as JSON; receives node-tree description over stdout. IPC: JSON lines — `{"type":"mount","nodes":[...]}` or `{"type":"error","message":"..."}`. `Process.destroy()` kills runaway snippets.
+
+`src/test/java/com/jfxtutor/engine/runtime/PerformanceBudgetTest.java`
+Measures cold-start and warm-recompile latency. Asserts p50 warm recompile < 250 ms.
+
+**Modify [SnippetRunner.java](src/main/java/com/jfxtutor/engine/runtime/SnippetRunner.java):**
+- Add strict-mode flag (from `AppConfig.strictSandbox`): when on, delegates to `ChildJvmRunner` instead of in-process compile
+- Auto-enable strict mode after 3 consecutive `HeapWatcher` leak warnings
+
+---
+
+### Sprint 10 — Track 2: B3b — Accessibility audit + snapshot tests
+
+Accessibility (Java code, not CSS):
+- All interactive controls in `LessonPane`, `InspectorPane`, `TutorPane`, `LessonNavigator` get `setAccessibleText(...)` + `setAccessibleRole(...)`
+- Tab traversal audit: `setFocusTraversable(true/false)` on all nodes; verify natural reading order
+
+Snapshot tests:
+- `Node.snapshot(SnapshotParameters, WritableImage)` → PNG; golden images in `src/test/resources/snapshots/`
+- Capture: LessonPane challenge row (idle / pass / fail), InspectorPane with node selected, TutorPane with a reply rendered
+- CI compares pixel-by-pixel (1% diff tolerance for font rendering)
+
+---
+
+### Sprint 11 — Both tracks: B8 — Packaging + signing + auto-update + OSS release prep
+
+**Modify [build.gradle.kts](build.gradle.kts):**
 ```kotlin
-plugins {
-    java
-    application
-    id("org.openjfx.javafxplugin") version "0.1.0"
-}
-
-group = "com.jfxtutor"
-version = "0.1.0"
-
-java {
-    toolchain { languageVersion.set(JavaLanguageVersion.of(21)) }
-}
-
-javafx {
-    version = "21.0.5"
-    modules = listOf("javafx.controls", "javafx.fxml")
-}
-
-val compilerAccessJvmArgs = listOf(
-    "--add-modules=jdk.compiler",
-    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-    "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
-)
-
-application {
-    mainClass.set("com.jfxtutor.app.JavaFxTutorApp")
-}
-
-dependencies {
-    implementation("org.fxmisc.richtext:richtextfx:0.11.2")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2")
-    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2")
-    implementation("org.commonmark:commonmark:0.22.0")
-    implementation("org.slf4j:slf4j-simple:2.0.13")
-
-    testImplementation(platform("org.junit:junit-bom:5.10.3"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation("org.testfx:testfx-core:4.0.18")
-    testImplementation("org.testfx:testfx-junit5:4.0.18")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-}
-
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs(compilerAccessJvmArgs)
-}
-
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-    jvmArgs(compilerAccessJvmArgs)
+plugins { id("org.beryx.runtime") version "1.13.1" }
+runtime {
+    jpackage {
+        imageName = "JavaFX Tutor"
+        appVersion = project.version.toString()
+        vendor = "JavaFX Tutor Project"
+        imageOptions = listOf("--mac-package-identifier", "com.jfxtutor.app")
+        installerOptions = listOf("--win-dir-chooser", "--linux-shortcut")
+    }
 }
 ```
 
----
+**New files:**
+- `.github/workflows/release.yml` — matrix: `macos-14`, `windows-2022`, `ubuntu-22.04`; triggers on `v*.*.*` tag; uploads `.dmg`/`.msi`/`.deb` to GitHub Release
+- `src/main/resources/icons/app.icns`, `app.ico`, `app.png` — 512×512 app icons
+- `src/main/java/com/jfxtutor/ui/UpdateChecker.java` — `CompletableFuture` fetches GitHub releases API on startup (skipped if `AppConfig.checkForUpdates == false`); shows dismissable banner if newer version found; no silent install
+- `RELEASING.md`, `CONTRIBUTING.md`, `CODE_OF_CONDUCT.md`, `LICENSE` (MIT)
 
-## Phased implementation roadmap
+**Modify [AppConfig.java](src/main/java/com/jfxtutor/data/config/AppConfig.java):**
+Add `checkForUpdates: boolean` (default true), `dismissedUpdateVersion: String`.
 
-### Phase 0 — Skeleton + Hello World lesson end-to-end (target: 1 day)
-
-**Goal**: Launch the app, see a static lesson on the left, a non-editable preview showing the hardcoded starter snippet rendered into `PreviewHost`. No compilation yet. No inspector. No editor interactivity.
-
-Files to create:
-- `build.gradle.kts`, `settings.gradle.kts`, `gradle/wrapper/*`, `gradlew`
-- `src/main/java/com/jfxtutor/app/JavaFxTutorApp.java`
-- `src/main/java/com/jfxtutor/app/MainView.java`
-- `src/main/java/com/jfxtutor/ui/{LessonPane,EditorPane,PreviewHost,InspectorPane,LessonNavigator}.java` (placeholder content)
-- `src/main/resources/css/app.css`
-- `src/main/resources/curriculum/foundations/001-what-is-a-stage.md`
-
-**Smallest demonstrable milestone**: `./gradlew run` opens a window with the four panes laid out and lesson 001's text visible.
-
-### Phase 1 — Curriculum data model + lesson navigator (target: 1 day)
-
-- `data/curriculum/{Lesson,LessonFrontmatter,CurriculumLoader}.java`
-- `LessonNavigator` reads all `curriculum/**/*.md` at startup, groups by tier, fires selection events
-- `LessonPane` renders markdown body via commonmark-java → `TextFlow`
-- Write 2 more foundations lessons (`002`, `003`) so the navigator is non-trivial
-
-**Milestone**: click any of three lessons in the left rail, see its markdown body rendered.
-
-### Phase 2 — Embedded editor + safe live preview (target: 2-3 weeks, the heart of the project)
-
-- `engine/compile/InMemoryClassFile.java` — `JavaFileObject` backed by `ByteArrayOutputStream`
-- `engine/compile/InMemorySourceFile.java` — source string as a `JavaFileObject`
-- `engine/compile/InMemoryJavaFileManager.java` — `ForwardingJavaFileManager` that captures `output()` calls
-- `engine/compile/SnippetCompiler.java`:
-  - wraps user body in `package _gen; import javafx.scene.*; ... public class _Snippet { public static Parent build() { <USER_BODY> } }`
-  - calls `ToolProvider.getSystemJavaCompiler().getTask(...)` with our file manager
-  - forwards runtime classpath/module-path and remaps generated diagnostics back to user snippet lines
-  - on success, returns `CompileResult(Map<String, byte[]>, "_gen._Snippet")`; on failure returns diagnostics or a clear compiler error message
-- `engine/runtime/SnippetClassLoader.java` — custom loader that calls `defineClass()` from the in-memory byte map; `URLClassLoader` is not appropriate because there are no class files or jars on disk
-- `engine/runtime/SnippetSession.java` — `AutoCloseable`, holds `SnippetClassLoader` and the mounted `Parent`; `close()` detaches Parent from its parent on FX and clears loader byte refs
-- `engine/runtime/SnippetRunner.java`:
-  - debounced via `PauseTransition`
-  - submits compile to `Executors.newSingleThreadExecutor()` (single thread guarantees ordering)
-  - invokes `build()` on a per-generation daemon executor with a 2-second `Future.get` timeout and `shutdownNow()` on timeout
-  - discards stale generations before mounting so older compiles cannot overwrite newer edits
-  - on success: dispose previous session, mount new Parent in `PreviewHost`
-  - on failure: render diagnostics into a small banner overlay on `PreviewHost`
-- `EditorPane` becomes a real `CodeArea` with RichTextFX Java highlighting (use the standard `RegexJavaHighlighter` pattern from RichTextFX demos)
-- `editor-java.css` defines the token styles
-
-**Milestone**: edit a `Label` text in the editor, see the preview update within ~400 ms.
-
-### Phase 3 — Challenge runner MVP + progress persistence (target: 1 week)
-
-- `engine/challenge/{Assertions,ChallengeRunner}.java` lands before the inspector so learners can validate work early
-- v1 can use hardcoded Java assertion classes per lesson before the DSL exists
-- `AssertionParser` follows with explicit `ClassResolver` scope:
-  - maps common short names such as `VBox`, `HBox`, `StackPane`, `Label`, and `Button` to JavaFX classes
-  - rejects ambiguous or unknown class names with lesson-author-facing errors like `Unknown class 'Vbox'; did you mean 'VBox'?`
-  - keeps a hardcoded import map first; reflection-based lookup is a later convenience
-- `data/progress/ProgressStore.java` with Jackson, including `jackson-datatype-jsr310` for `Instant`
-- Atomic writes create `state.json.tmp` inside `~/.javafx-tutor/` before `Files.move(..., ATOMIC_MOVE)`, because atomic moves only work reliably within the same filesystem
-- `LessonPane` gains a "Check challenge" button per challenge, badge turns green on pass
-- On lesson switch: save current snippet; reload destination lesson's snippet if previously edited
-
-**Milestone**: complete lesson 001's challenge, close and reopen the app, see the green check and your edited snippet still there.
-
-### Phase 4 — Inspector + dynamic mirror mode (target: 1-2 weeks)
-
-- `engine/inspect/NodeRef.java` — immutable handle: `Node`, computed path, snapshot of CSS classes, bounds
-- `engine/inspect/PropertyWatcher.java` — `Map<WeakReference<Node>, List<ChangeListener>>`; method `watch(Node, propertyName)` returns an `ObservableValue` proxy
-- `engine/inspect/NodeInspector.java`:
-  - `setRoot(Parent)` rebuilds the TreeView
-  - hover on preview → highlight overlay (translucent rectangle over `localToScene(getBoundsInLocal())`)
-  - selected node → property table on the right with live values
-- `InspectorPane` has a mode toggle: "Preview" (root = `PreviewHost.snippetRoot`) vs. "Mirror" (root = `MainView` itself)
-- In Mirror mode, selection is opt-in through an "inspect pointer" toggle plus Ctrl-Alt-click. The overlay must be click-through when inactive, and when active it should show the deepest pick result plus its parent chain so scroll panes, cells, and border-pane empty regions are not ambiguous.
-- Hover highlight in Mirror mode is throttled and disabled while controls are being dragged or text is being edited, so the inspector does not fight normal app interaction.
-
-**Milestone**: drag the host window edge, watch the host MainView's `widthProperty` tick in the inspector in Mirror mode.
-
-### Phase 5 — Curriculum content (target: beta at 20 lessons; full product at 100)
-
-The engine is only useful once the content is shippable. Completion criteria:
-
-- **Alpha**: 5 foundations lessons, all with starter snippets and passing challenge assertions.
-- **Beta / minimum viable curriculum**: 20 lessons: 10 foundations, 6 layouts, 4 controls. These must teach enough JavaFX for a learner to build a small form-based app.
-- **1.0**: all 100 lessons, each with frontmatter, starter snippet, one primary challenge, one stretch challenge, and a reviewer pass for code accuracy.
-
-Content workflow: draft lessons in batches of 5, run every starter snippet through the live preview, run every challenge assertion against both the starter and expected solution, then review for learner pacing before merging.
-
-Tier file counts and themes:
-
-| Tier | Range | Count | What fills it |
-|---|---|---|---|
-| Foundations | 001–015 | 15 | `Application`, `Stage`, `Scene`, `Group` vs `Parent`, `Node` hierarchy, FX thread, `Platform.runLater`, basic `Label`/`Button`/`TextField`, `Image`, `Cursor`, sizing concepts, the layout pulse |
-| Layouts | 016–030 | 15 | `StackPane`, `VBox`, `HBox`, `BorderPane`, `GridPane`, `AnchorPane`, `FlowPane`, `TilePane`, alignment, padding, `setMinWidth`/`pref`/`max`, growth priorities, `Region.layoutChildren` override |
-| Controls | 031–045 | 15 | `Button`, `ToggleButton`, `CheckBox`, `RadioButton`, `ChoiceBox`, `ComboBox`, `ListView`, `TreeView`, `TableView`, `TextArea`, `TextField` validation, `DatePicker`, `Slider`, `ProgressBar`, custom cell factories |
-| Properties & Bindings | 046–060 | 15 | `SimpleStringProperty`, `IntegerProperty`, `bind()` vs `bindBidirectional()`, `Bindings` helpers, `ObservableList`, `FXCollections`, weak listeners, common binding pitfalls, custom property classes |
-| Events & Concurrency | 061–072 | 12 | event filters vs handlers, bubbling, `Task`, `Service`, `WorkerStateEvent`, `ScheduledService`, cancellation, FX-thread invariant, async patterns with `CompletableFuture` |
-| CSS & Theming | 073–082 | 10 | selectors, pseudo-classes (`:hover`, `:focused`), `-fx-*` properties, theme stylesheets, `getStyleClass()`, hot-reload of CSS, dark/light theme switching, `Modena` overrides |
-| FXML & MVC | 083–090 | 8 | `FXMLLoader`, `@FXML`, controller wiring, `fx:id`, includes, custom controls, Scene Builder workflow, when to prefer programmatic |
-| Animation & Media | 091–096 | 6 | `Timeline`, `KeyFrame`, transitions (`FadeTransition` et al), interpolators, `MediaView`, `Canvas` animation |
-| Packaging & Deployment | 097–100 | 4 | jpackage flags, app icons, native installers, code-signing tradeoffs |
-| **Total** | | **100** | |
-
-**Authored as exemplars in this plan (full content lives in resource files, not here)**:
-1. `001-what-is-a-stage.md` — frontmatter shown above; body explains Stage/Scene/Node and challenge asks to add a `VBox` around the label.
-2. `017-vbox-vs-hbox.md` — starter is a `VBox` with two buttons; challenge converts to `HBox` and verifies via `containsNodeOfType(HBox.class)`.
-3. `048-bind-label-to-slider.md` — starter shows a `Slider` and a `Label`; challenge requires `label.textProperty().bind(slider.valueProperty().asString("%.1f"))`, verified via `propertyEquals("Label#out", "text", "0.0")` after a programmatic slider set.
-
-### Phase 6 — Packaging via jpackage (target: 1 day)
-
-- Add `org.beryx.runtime` Gradle plugin (works without JPMS by bundling a full JRE)
-- `runtime { jpackage { ... } }` config: app name, vendor, icon (`.icns` on macOS), `--mac-package-identifier`
-- Output: `build/jpackage/JavaFxTutor.app` and `JavaFxTutor-0.1.0.dmg`
-- **Milestone**: drag the `.app` to Applications, launch from Spotlight, complete a lesson.
+**README rewrite:** animated GIF, install links, feature list, "Build from source" one-liner.
 
 ---
 
-## Risks (top 5) and mitigations
+### Sprint 12 — Release stabilization + 1.0
 
-1. **ClassLoader leaks from per-edit recompiles**
-   - *Mitigation*: every `SnippetSession` is `AutoCloseable`; `SnippetRunner` holds at most one. Detach `Parent` from scene graph before nulling refs (otherwise the scene retains it). Clear the custom `SnippetClassLoader` byte map. Add a heap-watch dev mode: log `MemoryMXBean.getHeapMemoryUsage()` every 30 s; if it grows monotonically across 50 recompiles, fall back to **child-JVM** model.
-   - *Detection test*: a JUnit test that recompiles 200 distinct snippets and asserts `WeakReference<ClassLoader>` gets GC'd after `System.gc()`.
-
-2. **`Platform.runLater` deadlocks or ordering bugs**
-   - *Mitigation*: never block the FX thread waiting for compile or `build()`. Compile and build off-thread, then mount only the newest generation on the FX thread. Listener wiring and node disposal stay on FX.
-   - *Detection*: TestFX test that fires 20 rapid edits and asserts the final preview matches the last edit (proves single-thread executor ordering).
-
-3. **Security of executing arbitrary user-written code**
-   - *Reality check*: this is a **local single-user** tool. The user is writing code to teach themselves; the threat model is "I accidentally wrote `System.exit(0)`", not malice. Therefore: no SecurityManager (deprecated in 21 anyway). Mitigations: (a) preflight reject obvious process-exit calls; (b) catch `Throwable` around `build()` and render in error banner; (c) run `build()` through a `Future` on a daemon executor, use `get(2s)`, `cancel(true)`, and `shutdownNow()` on timeout; (d) explicit default imports for common JavaFX APIs.
-   - *Remaining risk*: Java cannot safely kill a non-interruptible in-process infinite loop. If this becomes common, move snippet execution to a child JVM and communicate the scene description or screenshot back to the host.
-
-4. **CSS reload pitfalls + dynamic mirror collisions**
-   - The host app and the sandbox share a `Scene` (the sandbox `Parent` is mounted inside the host scene). Sandbox CSS via `Parent.getStylesheets().add(...)` is scoped to that subtree — good. But a user's `Node.setStyle(...)` with an `-fx-base` change can bleed into the host through `:root` cascades.
-   - *Mitigation*: mount the sandbox `Parent` inside a dedicated wrapper with `getStyleClass().add("sandbox-root")` and write host CSS rules to use `.host-root` selectors. Document: "lesson CSS is scoped under `.sandbox-root`".
-
-5. **RichTextFX + JavaFX 21 compatibility on Apple Silicon**
-   - RichTextFX 0.11.2 supports JavaFX 21 but historically has had thread-assertion issues. The `flowless` transitive dep occasionally errors on macOS retina with certain font configs.
-   - *Mitigation*: pin to `0.11.2`, keep a `SmokeUiTest` that opens a `CodeArea`, loads the starter snippet, and exercises compile/error paths. If it fails on arm64, fallback is `org.fxmisc.richtext:richtextfx:0.11.0` or — last resort — replacing with a `TextArea` + manual highlighting.
+- Heap-leak stress test: 200 snippets, GC, assert heap delta < 50 MB
+- Full manual QA: all 100 lessons, all challenges, all hints/solutions
+- Fix all P0/P1 bugs
+- Tag `v1.0.0` → CI builds signed installers → GitHub Release
+- Post: Reddit r/JavaFX, Hacker News Show HN, dev.to
 
 ---
 
-## Verification — current baseline
+## Execution model (locked decisions)
 
-Run from repo root:
-
-```bash
-brew install --cask temurin@21              # one time
-./gradlew --version                          # confirms wrapper works
-./gradlew test --rerun-tasks --warning-mode all
-./gradlew run                                # launches the app
-```
-
-You should see:
-- A window ~1200×800 titled "JavaFX Tutor".
-- Four panes: left rail with "001 — What is a Stage?" highlighted; left-center showing the markdown body of lesson 001; center-top showing an editable `CodeArea` with syntax highlighting; center-bottom showing live preview output from the compiled starter snippet; right pane showing a placeholder "Inspector".
-- Blank or invalid editor contents should show an error overlay without unmounting the last good preview.
-- Slow `build()` snippets should time out and show an error instead of freezing the host UI.
-- Window resizes cleanly; no exceptions in console.
-
-`SmokeUiTest`, `SnippetCompilerTest`, and `CurriculumLoaderTest` must pass before expanding the lesson set or inspector work.
+1. **Arcs A and B run in parallel every sprint.**
+2. **AI tutor is a 1.0 gate** — first-run wizard is required.
+3. **Visual editor ships with full round-trip codegen** — B7.1 prototype at S7, full at S9.
+4. **Open-source community release** — MIT, signed installers, no telemetry (or opt-in only).
+5. **All progress is local** — no cloud sync, no external analytics.
 
 ---
 
-## Libraries to use vs build
+## Out of scope
 
-| Concern | Use | Why |
-|---|---|---|
-| Code editor with syntax highlighting | **RichTextFX `CodeArea`** + the demo Java highlighter | Best-in-class for JavaFX; the standard answer. Writing our own styled text area would be weeks of work. |
-| Markdown rendering | **commonmark-java** | Pure Java, no JS deps. Render to your own JavaFX nodes via custom `Visitor` → `TextFlow`. |
-| JSON persistence | **Jackson databind** | Industry standard, handles `Instant`/records cleanly with `jackson-datatype-jsr310`. |
-| In-memory Java compile | **`javax.tools.JavaCompiler`** (JDK builtin) | Zero deps. Don't pull in Janino — too restrictive on Java 21 syntax. |
-| UI smoke testing | **TestFX 4.0.18 + JUnit 5** | Confirmed by your spec; matches JavaFX 21. |
-| Logging | **slf4j-simple** | Trivial; replaceable later if you want logback. |
-| Packaging | **`org.beryx.runtime`** Gradle plugin (NOT badass-jlink) | Works without JPMS; wraps jpackage cleanly. |
-| Inspector reference (read source, don't depend on) | **ScenicView** (BSD) | Don't ship as dep — incompatible licensing/maintenance burden. Read its source for the `localToScene` overlay pattern. |
-| **Build, do not pull in**: ControlsFX, TilesFX, FormsFX | — | Out of scope for v1; would muddy "this app is itself a JavaFX example written from the standard widgets". |
+- Multi-user / cloud sync
+- Mobile or web
+- Translations / i18n
+- IDE-style refactoring (rename, extract method)
+- Multi-file snippet projects
+- Third-party lesson packs / plugin system (reconsider after 1.0)
 
 ---
 
-## Open items I flagged but did not resolve
+## Running gap table (update each sprint)
 
-- **App icon**: needed for jpackage in Phase 6. I assumed you'll draw / generate one before Phase 6. Not blocking earlier phases.
-- **Theme**: dark theme included in CSS, but no theme switcher built in Phase 0–4. Lesson 077 will add it.
-- **Internationalization**: out of scope. English-only. Lessons that mention `ResourceBundle` show the API without translating the app.
+| Phase | Status |
+|---|---|
+| A1 — Challenge runner + assertion DSL | ✅ Done |
+| A2 — Inspector v2 (engine/inspect/, hover, mirror, CSS tab, bounds tab) | ✅ Done |
+| A3 — Progress persistence (ProgressStore, SnippetStore, atomic writes) | ✅ Done |
+| B3a — ThemeManager, dark/light/HC CSS, KeyBindings shell | ✅ Done |
+| **B1a** — Hints/solution frontmatter + LessonPane UI + SolutionDiffView | ❌ Sprint 3 |
+| **B2a** — AppConfig, AnthropicClient, TutorPane, FirstRunWizard, CostMeterBar | ❌ Sprint 3 |
+| **B2b** — Tool use (Tools.java, ProposedEditView), streaming polish | ❌ Sprint 4 |
+| **B3b (part 1)** — System theme detect, accessibility, font-size pref, collapsible panes, CSS hot reload, PreferencesDialog | ❌ Sprint 4 |
+| **B4** — SearchService, CommandPalette, recent lessons, bookmarks, tier counts | ❌ Sprint 5 |
+| **B9a** — Hints/solutions + tightened assertions for lessons 001–030 | ❌ Sprint 5 |
+| **B10a** — HeapWatcher, CrashReporter, verbose log + AppLog file sink | ❌ Sprint 6 |
+| **B5** — Streaks.java, AchievementsPane, time tracking wired into MainView | ❌ Sprint 6 |
+| **B7.1** — DesignTab, PropertyGrid (read-only), WidgetPaletteView, WidgetPalette | ❌ Sprint 7 |
+| **B9b** — Hints/solutions for lessons 031–065 | ❌ Sprint 7 |
+| **B7.2** — SourceMutator, ConstructionLocator, LiteralFormatter, codegen from PropertyGrid | ❌ Sprint 8 |
+| **B6** — GistClient, SnippetExporter, SnippetImporter | ❌ Sprint 8 |
+| **B7.3** — Drag-from-palette codegen, unsupported-widget guard | ❌ Sprint 9 |
+| **B9c** — Hints/solutions for lessons 066–100, nextLesson link verification | ❌ Sprint 9 |
+| **B10b** — ChildJvmRunner, strict-mode sandbox, PerformanceBudgetTest | ❌ Sprint 10 |
+| **B3b (part 2)** — A11y audit, snapshot tests | ❌ Sprint 10 |
+| **B8** — jpackage Gradle plugin, GitHub Actions matrix, UpdateChecker, OSS files | ❌ Sprint 11 |
+| **S12** — Release stabilization + v1.0.0 tag | ❌ Sprint 12 |
